chore: test build