@@ -4,8 +4,14 @@ import com.sun.jna.Library;
 import com.sun.jna.Native;
 import com.sun.jna.Platform;
 import com.sun.jna.Pointer;
-import java.lang.ref.Cleaner;
-import java.nio.file.Paths;
+import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 interface UnleashFFI extends Library {
 
@@ -27,55 +33,66 @@ interface UnleashFFI extends Library {
 
     Pointer should_emit_impression_event(Pointer ptr, String name);
 
+    Pointer built_in_strategies();
+
     void free_response(Pointer pointer);
 }
 
 class YggdrasilFFI {
-    private static final Cleaner CLEANER = Cleaner.create();
-
-    @SuppressWarnings("unused")
-    private final Cleaner.Cleanable cleanable;
+    private static final Logger LOG = LoggerFactory.getLogger(YggdrasilFFI.class);
 
     private final UnleashFFI ffi;
     private final Pointer enginePtr;
 
-    /** If we want singleton we just make the constructors private */
-    YggdrasilFFI() {
-        this(System.getenv("YGGDRASIL_LIB_PATH"));
-    }
-
-    static UnleashFFI loadLibrary(String libraryPath) {
-        if (libraryPath == null) {
-            libraryPath = "."; // assume it's accessible in current path
-        }
-        System.out.println("Loading library from " + Paths.get(libraryPath).toAbsolutePath());
-        String libImpl = "libyggdrasilffi.so";
+    static UnleashFFI loadLibrary() {
+        String libName;
         if (Platform.isMac()) {
-            libImpl = "libyggdrasilffi.dylib";
+            libName = "libyggdrasilffi.dylib";
         } else if (Platform.isWindows()) {
-            libImpl = "libyggdrasilffi.dll";
+            libName = "libyggdrasilffi.dll";
+        } else {
+            libName = "libyggdrasilffi.so";
         }
 
-        String combinedPath = Paths.get(libraryPath, libImpl).toString();
-        return Native.load(combinedPath, UnleashFFI.class);
+        try {
+            // Extract and load the native library from the JAR
+            Path tempLib = extractLibraryFromJar(libName);
+            System.load(tempLib.toAbsolutePath().toString());
+            return Native.load(libName, UnleashFFI.class);
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to load native library", e);
+        }
     }
 
-    YggdrasilFFI(String libraryPath) {
-        this(loadLibrary(libraryPath));
+    private static Path extractLibraryFromJar(String libName) throws IOException {
+        Path tempFile = Files.createTempFile("lib", libName);
+        try (InputStream in = UnleashFFI.class.getResourceAsStream("/" + libName);
+                OutputStream out = Files.newOutputStream(tempFile)) {
+            if (in == null) {
+                throw new FileNotFoundException("File " + libName + " was not found inside JAR.");
+            }
+
+            byte[] buffer = new byte[1024];
+            int readBytes;
+            while ((readBytes = in.read(buffer)) != -1) {
+                out.write(buffer, 0, readBytes);
+            }
+        }
+        return tempFile;
+    }
+
+    YggdrasilFFI() {
+        this(loadLibrary());
     }
 
     YggdrasilFFI(UnleashFFI ffi) {
         this.ffi = ffi;
         this.enginePtr = this.ffi.new_engine();
+    }
 
-        // Note that the cleaning action must not refer to the object being registered.
-        // If so, the object will not become phantom reachable and the cleaning action
-        // will not be invoked automatically.
-        // this.cleanable uses a PhantomReference to this object, so from a GC
-        // perspective it doesn't count.
-        this.cleanable =
-                CLEANER.register(
-                        this, new YggdrasilNativeLibraryResourceCleaner(this.ffi, this.enginePtr));
+    @Override
+    protected void finalize() {
+        new YggdrasilNativeLibraryResourceCleaner(this.ffi, this.enginePtr).run();
     }
 
     Pointer takeState(String toggles) {
@@ -104,6 +121,10 @@ class YggdrasilFFI {
 
     Pointer getMetrics() {
         return this.ffi.get_metrics(this.enginePtr);
+    }
+
+    Pointer builtInStrategies() {
+        return this.ffi.built_in_strategies();
     }
 
     Pointer shouldEmitImpressionEvent(String name) {
